# api/jester/internal/gen/types.gen.go
@@ -3,19 +3,38 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.16.3 DO NOT EDIT.
 package gen
 
+import (
+	openapi_types "github.com/oapi-codegen/runtime/types"
+)
+
 const (
 	BearerAuthScopes = "bearerAuth.Scopes"
 )
 
+// Addresses defines model for Addresses.
+type Addresses struct {
+	// City 市区町村
+	City string `json:"city"`
+
+	// Other その他住所
+	Other string `json:"other"`
+
+	// Prefecture 都道府県
+	Prefecture string `json:"prefecture"`
+
+	// Region 地域
+	Region string `json:"region"`
+
+	// Street 町域
+	Street string `json:"street"`
+
+	// ZipCode ユーザーの郵便番号（XXX-XXXX形式）
+	ZipCode string `json:"zip_code"`
+}
+
 // CreateUserResponse ユーザ新規登録APIのレスポンス
 type CreateUserResponse struct {
 	// UserId user_idを返却します。
-	UserId int64 `json:"user_id"`
-}
-
-// GetMeResponse defines model for GetMeResponse.
-type GetMeResponse struct {
-	// UserId 登録した自身のユーザーIDを返却
 	UserId int64 `json:"user_id"`
 }
 
@@ -24,3 +43,39 @@ type HealthCheck struct {
 	// Message メッセージ。通常はok
 	Message string `json:"message"`
 }
+
+// Me defines model for Me.
+type Me struct {
+	// UserId 登録した自身のユーザーIDを返却
+	UserId int64 `json:"user_id"`
+}
+
+// Name defines model for Name.
+type Name struct {
+	// FirstName ユーザーの名前
+	FirstName string `json:"first_name"`
+
+	// FirstNameRoman ユーザーの名前 (ローマ字表記)
+	FirstNameRoman string `json:"first_name_roman"`
+
+	// LastName ユーザーの姓
+	LastName string `json:"last_name"`
+
+	// LastNameRoman ユーザーの姓 (ローマ字表記)
+	LastNameRoman string `json:"last_name_roman"`
+}
+
+// Profile defines model for Profile.
+type Profile struct {
+	Address Addresses `json:"address"`
+
+	// Birthdate ユーザーの生年月日（YYYY-MM-DD形式）
+	Birthdate openapi_types.Date `json:"birthdate"`
+
+	// ImageUrl ユーザーのプロフィール画像のURL
+	ImageUrl string `json:"image_url"`
+	Name     Name   `json:"name"`
+}
+
+// CreateProfileJSONRequestBody defines body for CreateProfile for application/json ContentType.
+type CreateProfileJSONRequestBody = Profile
